[fix] add error handling